[project]
name = "loudness-lab"
version = "0.1.0"
description = "A tiny open-source desktop app that makes every audio file the same perceived volume and generates beautiful before/after proof reports. It rides the visible demand for simple Python utilities around audio normalization/equalization, but differentiates with creator presets, LUFS targets, privacy-first local processing, and highly shareable visual reports."
requires-python = ">=3.11"

[project.scripts]
loudness-lab = "loudness_lab.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
